--- a/app/src/main/res/layout/activity_title.xml
+++ b/app/src/main/res/layout/activity_title.xml
@@ -111,8 +111,35 @@
                 android:textSize="60sp"
                 android:layout_marginTop="25dp"/>
             </LinearLayout>
-        </LinearLayout>
-    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/정비소"
+        android:background="#87CEEB">
+        <ImageView
+            android:layout_width="120dp"
+            android:layout_height="90dp"
+            android:background="@drawable/ic_carwash"
+            android:textColor="#090909"
+            android:textSize="20sp"
+            app:backgroundTint="#FFFFFF"
+            app:backgroundTintMode="multiply" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/정비소"
+            android:text="   정비소"
+            android:background="#00FFFFFF"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:textSize="60sp"
+            android:layout_marginTop="25dp"/>
+        </LinearLayout>
+
+    </LinearLayout>
+</LinearLayout>
 
 </LinearLayout>
