--- a/app/src/main/res/layout/activity_title.xml
+++ b/app/src/main/res/layout/activity_title.xml
@@ -18,6 +18,7 @@
             android:layout_marginLeft="70dp"
             android:layout_gravity="end"
             android:text="WHERE"
+            android:layout_margin="25dp"
             android:textColor="#6495ed"
             android:textSize="80sp"
             android:textStyle="bold"
@@ -38,6 +39,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:layout_margin="10dp"
             android:layout_width="120dp"
             android:layout_height="90dp"
             android:background="@drawable/ic__park"
@@ -53,6 +55,7 @@
             android:layout_toRightOf="@+id/주차장"
             android:background="#00FFFFFF"
             android:text="   주차장"
+            android:layout_margin="10dp"
             android:textColor="@color/white"
             android:textSize="60sp"
             android:textStyle="bold" />
@@ -65,6 +68,7 @@
             android:id="@+id/주유소"
             android:background="#ADD8E6">
             <ImageView
+                android:layout_margin="10dp"
                 android:layout_width="120dp"
                 android:layout_height="90dp"
                 android:background="@drawable/ic_gas"
@@ -78,6 +82,7 @@
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/주유소"
                 android:text="   주유소"
+                android:layout_margin="10dp"
                 android:background="#00FFFFFF"
                 android:textStyle="bold"
                 android:textSize="60sp"
@@ -92,6 +97,7 @@
             android:id="@+id/세차장"
             android:background="#87CEEB">
             <ImageView
+                android:layout_margin="10dp"
                 android:layout_width="120dp"
                 android:layout_height="90dp"
                 android:background="@drawable/ic_carwash"
@@ -105,6 +111,7 @@
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/세차장"
                 android:text="   세차장"
+                android:layout_margin="10dp"
                 android:background="#00FFFFFF"
                 android:textStyle="bold"
                 android:textColor="@color/white"
@@ -118,10 +125,12 @@
         android:orientation="horizontal"
         android:id="@+id/정비소"
         android:background="#87CEEB">
+
         <ImageView
+            android:layout_margin="10dp"
             android:layout_width="120dp"
             android:layout_height="90dp"
-            android:background="@drawable/ic_carwash"
+            android:background="@drawable/ic_car_center_icon"
             android:textColor="#090909"
             android:textSize="20sp"
             app:backgroundTint="#FFFFFF"
@@ -132,6 +141,7 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/정비소"
             android:text="   정비소"
+            android:layout_margin="10dp"
             android:background="#00FFFFFF"
             android:textStyle="bold"
             android:textColor="@color/white"
