--- a/app/src/main/res/layout/carcenter_main.xml
+++ b/app/src/main/res/layout/carcenter_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".Parking">
+    tools:context=".CarCenter">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
