--- a/app/src/main/res/layout/carcenter_main.xml
+++ b/app/src/main/res/layout/carcenter_main.xml
@@ -22,7 +22,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:background="@drawable/round_corner"
             android:orientation="horizontal">
 
