CarCenter_design_update7

--- a/app/src/main/res/layout/gas_main.xml
+++ b/app/src/main/res/layout/gas_main.xml
@@ -73,7 +73,7 @@
         <LinearLayout
             android:id="@+id/zz"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="30dp"
             android:layout_marginLeft="15dp"
