--- a/app/src/main/res/layout/gas_main.xml
+++ b/app/src/main/res/layout/gas_main.xml
@@ -72,7 +72,7 @@
 
         <LinearLayout
             android:id="@+id/zz"
-            android:layout_width="380dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
@@ -84,19 +84,22 @@
 
             <Spinner
                 android:id="@+id/추천"
-                android:layout_width="90dp"
+                android:layout_width="80dp"
+                android:layout_margin="3dp"
                 android:layout_height="match_parent"
                 android:entries="@array/km" />
 
             <Spinner
                 android:id="@+id/spinner2"
-                android:layout_width="90dp"
+                android:layout_width="80dp"
+                android:layout_margin="3dp"
                 android:layout_height="match_parent"
                 android:entries="@array/gas" />
 
             <Spinner
                 android:id="@+id/spinner3"
-                android:layout_width="90dp"
+                android:layout_width="80dp"
+                android:layout_margin="3dp"
                 android:layout_height="match_parent"
                 android:entries="@array/array2" />
 
@@ -104,11 +107,11 @@
                 android:id="@+id/now"
                 android:layout_width="65dp"
                 android:layout_height="match_parent"
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="5dp"
+                android:layout_margin="3dp"
                 android:background="#0CA3F4"
                 android:gravity="center_horizontal"
-                android:text="검색" />
+                android:text="검색"
+                android:textSize=""/>
         </LinearLayout>
 
         <LinearLayout
