--- a/app/src/main/res/layout/carcenter_main.xml
+++ b/app/src/main/res/layout/carcenter_main.xml
@@ -31,9 +31,10 @@
 
             <EditText
                 android:id="@+id/address_input"
-                android:layout_width="282dp"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="3dp"
+                android:layout_weight="6"
                 android:ems="10"
                 android:hint="주소를 입력하세요"
                 android:textColor="#0B0000"
@@ -41,14 +42,16 @@
 
             <Button
                 android:id="@+id/search_btn"
-                android:layout_width="56dp"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:background="@drawable/ic_baseline_search_24" />
 
             <Button
                 android:id="@+id/camera"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:background="@drawable/ic_baseline_photo_camera_24" />
 
 
